// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp should add prefix and suffix 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 0.25rem;
}

.c0:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<time
  class="c0"
  datetime="2018-10-19"
>
  Prefix here  
  ۱۹ اکتبر ۲۰۱۸
    suffix here
</time>
`;

exports[`Timestamp should handle invalid date 1`] = `null`;

exports[`Timestamp should render correctly 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 0.25rem;
}

.c0:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<time
  class="c0"
  datetime="2018-10-19"
>
  ۱۹ اکتبر ۲۰۱۸
</time>
`;

exports[`Timestamp should render without a leading zero on the day 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 0.25rem;
}

.c0:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<time
  class="c0"
  datetime="2018-07-07"
>
  ۷ ژوئیه ۲۰۱۸
</time>
`;
